Bug fixing in client and driver auth endpoints

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,9 @@
     "Key": "replace_with_secure_key",
     "Issuer": "TaxiApi"
   },
+  "Auth": {
+    "ReturnCodeInResponse": true
+  },
   "Smtp": {
     "Host": "smtp.example.com",
     "Port": 587,
