--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,11 @@
   "Auth": {
     "ReturnCodeInResponse": true
   },
+  "Veloconnect": {
+    "Username": "your_veloconnect_username",
+    "Password": "your_veloconnect_password",
+    "Originator": "TaxiApp"
+  },
   "Smtp": {
     "Host": "smtp.example.com",
     "Port": 587,
