--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     "Issuer": "TaxiApi"
   },
   "OpenAI": {
-    "ApiKey": "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"
+    "ApiKey": ""
   },
   "Auth": {
     "ReturnCodeInResponse": true
